# methylFlow

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  MFGraph.cpp  MFGraph.hpp  Makefile  MethylRead.cpp  README  README.md  main.cpp
avgEval/: CMakeLists.txt  main.cpp
doc/: CMakeLists.txt  Doxyfile.in  mainpage.dox
evaluation/: CMakeLists.txt  evaluation.cpp  evaluation.h  main.cpp
glpk/: Makefile  config.status  libtool
glpk/examples/: Makefile  glpsol
glpk/src/: Makefile  libglpk.la  libglpk_la-glpapi01.lo  libglpk_la-glpapi02.lo  libglpk_la-glpapi03.lo  libglpk_la-glpapi04.lo  libglpk_la-glpapi05.lo  libglpk_la-glpapi11.lo  libglpk_la-glpapi14.lo  libglpk_la-glpapi15.lo  libglpk_la-glpapi16.lo  libglpk_la-glpapi17.lo  libglpk_la-glpapi18.lo  libglpk_la-glpapi19.lo  libglpk_la-glpapi20.lo  libglpk_la-glpapi21.lo  libglpk_la-glpavl.lo  libglpk_la-glpbfd.lo  libglpk_la-glpbfx.lo  libglpk_la-glpcpx.lo  libglpk_la-glpdmx.lo  libglpk_la-glpenv07.lo  libglpk_la-glpenv08.lo  libglpk_la-glpgmp.lo  libglpk_la-glpini01.lo  (+27 more)
methylFlow/: CMakeLists.txt  main.cpp
methylFlowr/: DESCRIPTION  MFDataSet-utils.R  NAMESPACE
mflib/: CMakeLists.txt  MFCpgEstimator.cpp  MFCpgEstimator.hpp  MFCpgSolver.cpp  MFCpgSolver.hpp  MFCpgSolverGradient.cpp  MFCpgSolverGradient.hpp  MFCpgSolverSuccessive.cpp  MFCpgSolverSuccessive.hpp  MFGraph.cpp  MFGraph.hpp  MFGraph_solve.cpp  MFRegionNamer.cpp  MFRegionNamer.hpp  MFRegionPrinter.cpp  MFRegionPrinter.hpp  MFRegionSolver.cpp  MFRegionSolver.hpp  MFSolver.cpp  MFSolver.hpp  MethylRead.cpp  MethylRead.hpp
simulator/: CMakeLists.txt  main.cpp  simulator.cpp  simulator.h
src/: MFGraph_solve.cpp  MFRegionPrinter.cpp  MFRegionPrinter.hpp  MethylRead.hpp
testing/: CMakeLists.txt  HapFrq.txt  compile.sh  eval.txt  evalAvgCoverage.txt  evalAvgCpG.txt  evalAvgReadLength.txt  evalCoverage.txt  evalCpG.txt  evalReadLength.txt  input.txt  match.txt  newOut.txt  newOut1.txt  newOut2.txt  newOut3.txt  outNew.txt  output.txt  plot.r  run.sh  sim1.tsv  sim2.tsv  simPattern.txt  simulateTSV.R  simulateTSV2.R  sorted_test.bam  test.sam  testMethyl.cpp  weight.txt
testing/coverage/: coverage.sh  coveragePlot.r
testing/coverage/hard/: eval.txt  evalAvg.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/coverage/hard-Auto/: eval.txt  evalAvg.txt  input.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/coverage/moderate/: eval.txt  evalAvg.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/coverage/moderate-Auto/: eval.txt  evalAvg.txt  evalAvgCoverage.txt  evalCoverage.txt  input.txt  match.txt  mcf.txt  mcfCoverage.txt  shortRead.txt  simPattern.txt  weight.txt
testing/coverage/simple/: eval.txt  evalAvg.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/coverage/simple-Auto/: eval.txt  evalAvg.txt  input.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/cpg/: cpg.sh  cpgPlot.r
testing/cpg/hard/: eval.txt  evalAvg.txt  input.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/cpg/hard-Auto/: eval.txt  evalAvg.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/cpg/moderate/: eval.txt  evalAvg.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt
testing/cpg/moderate-Auto/: eval.txt  evalAvg.txt  input.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/cpg/simple/: eval.txt  evalAvg.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/cpg/simple-Auto/: eval.txt  evalAvg.txt  evalAvgCpG.txt  evalCpG.txt  input.txt  match.txt  mcf.txt  mcfCpG.txt  shortRead.txt  simPattern.txt  weight.txt
testing/lambda/: eval.txt  evalAvg.txt  input.txt  lambda.sh  lambda1.sh  lambdaPlot.r  match.txt  mcf.txt  num.txt  shortRead.txt  simPattern.txt  weight.txt
testing/readLength/: readLength.sh  readLengthPlot.r
testing/readLength/hard/: eval.txt  evalAvg.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/readLength/hard-Auto/: eval.txt  evalAvg.txt  evalAvgReadLength.txt  evalReadLength.txt  input.txt  match.txt  mcf.txt  mcfReadLength.txt  shortRead.txt  simPattern.txt  weight.txt
testing/readLength/moderate/: eval.txt  evalAvg.txt  input.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/readLength/moderate-Auto/: eval.txt  evalAvg.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/readLength/simple/: eval.txt  evalAvg.txt  input.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
testing/readLength/simple-Auto/: eval.txt  evalAvg.txt  match.txt  mcf.txt  shortRead.txt  simPattern.txt  weight.txt
(+10 files in other folders)
